--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,12 +9,12 @@
     </title>
     <meta name="description" content="{% block meta_description %}{% endblock %}">
 
-    <link href="/assets/themes/bootstrap.css" rel="stylesheet"/>
-	<link href="assets/themes/_bootswatch.scss" rel="stylesheet"/>
-	<link href="assets/themes/_variables.scss" rel="stylesheet"/>
-	<link href="assets/themes/bootstrap.min.css" rel="stylesheet"/>
+    <link href="{{ asset('assets/themes/bootstrap.css')}}" rel="stylesheet"/>
+	<link href="{{ asset('assets/themes/_bootswatch.scss')}}" rel="stylesheet"/>
+	<link href="{{ asset('assets/themes/_variables.scss')}}" rel="stylesheet"/>
+	<link href="{{ asset('assets/themes/bootstrap.min.css')}}" rel="stylesheet"/>
 
-
+    <script src="{{ asset('assets/themes/bootstrap.bundle.min.js')}}"></script>
     {% block stylesheets '' %}
     {% block final_stylesheets '' %}
     {% block head_javascript '' %}
@@ -29,4 +29,5 @@
     {% block javascript '' %}
     {% block final_javascript '' %}
 </body>
+
 </html>
