--- a/templates/pages/ingredient/edit.html.twig
+++ b/templates/pages/ingredient/edit.html.twig
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="form-group">
-        {{form_row(form.submit)}}
+        {{form_row(form.submit, { 'label': 'Modifié mon ingrédient' }) }}
     </div>
     {{ form_end(form) }}
 </div>
